# PrivAI-Cloud-private

./: README.md  main.py  pyproject.toml
app/: .env  audio_io.py  inference.py  main.py  wer_calculator.py
app/static/: transcribe_with_comparison.html
