[project]
name = "privai-cloud-private"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi[standard]>=0.116.1",
    "huggingface-hub>=0.34.4",
    "jiwer>=4.0.0",
    "onnxruntime>=1.22.1",
    "onnxruntime-gpu=1.22.0",
    "python-multipart>=0.0.20",
    "soundfile>=0.13.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "transformers>=4.56.0",
    "uuid>=1.30",
]
